# todo

./: .gitignore  Cargo.toml  todo.db  todo.sqbpro
src/: main.rs  utils.rs
src/controllers/: home.rs  mod.rs  task.rs
src/models/: task.rs
src/views/: home.html  template.rs
src/views/layout/: main.html  main.jinja  menu.html  menu.jinja
src/views/task/: create.html  edit.html  index.html
