[package]
name = "todo"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = "0.8.1"
serde = { version = "1.0", features = ["derive"] }
tokio = { version = "1.0", features = ["full"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
minijinja = "2.3.1"
chrono = { version = "0.4", features = ["serde"] }
rusqlite = { version = "0.34.0", features = ["bundled","chrono"] }

